cmake_minimum_required(VERSION 3.20)
set (CMAKE_CXX_STANDARD 17)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ../../bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../../bin)
project(hashid)
if(WIN32)
    set(OSFORCOMPILE "win")
    if(CMAKE_SIZEOF_VOID_P EQUAL 8)
        set(ARCH "64")
    else()
        set(ARCH "32")
    endif()
else(UNIX AND NOT APPLE)
    set(OSFORCOMPILE "linux")
    if(CMAKE_SIZEOF_VOID_P EQUAL 8)
        set(ARCH "64")
    else()
        set(ARCH "")
    endif()
endif()
add_library(hashid SHARED "source/hashid.cpp")
set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "gmcl_" SUFFIX "_${OSFORCOMPILE}${ARCH}.dll")
target_include_directories(${PROJECT_NAME} PRIVATE
	"libs/gmod-module-base/include"
)